objects/UpdatewithpredefinedMobile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Updatewithpredefinedmobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updatewithpredefinedmobile</label>
        <type>Checkbox</type>
    </fields>
    <label>UpdatewithpredefinedMobile</label>
</CustomObject>